--- a/ControledeContatos/Views/Contato/ApagarConfirmacao.cshtml
+++ b/ControledeContatos/Views/Contato/ApagarConfirmacao.cshtml
@@ -6,7 +6,7 @@
     <h3>Realmente deseja apagar o contado(Caciano Neves)</h3>
 </div>
 
-<!--Tive que mudar o metodo pq a funcao "btn-block" nao funciona nas norvas versoes-->
+<!--Tive que mudar o metodo pq a funcao "btn-block" nao funciona nas norvas versoes 2-->
 <div class="d-grid gap-2">
     <a class="btn btn-primary btn-block" role="button" asp-controller="Contato" asp-action="Index">Cancelar Exclusão</a>
     <a class="btn btn-danger btn-block" role="button" asp-controller="Contato" asp-action="Apagar">Confirmar Exclusão</a>
