--- a/ControledeContatos/Views/Contato/Editar.cshtml
+++ b/ControledeContatos/Views/Contato/Editar.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model ContatoModel
+@{
     ViewData["Title"] = "Editar Contato";
 }
 
@@ -8,23 +9,27 @@
 
 </div>
 
-<form>
+<form asp-controller="Contato" asp-action="Alterar" method="post">
+
+    <input type="hidden" asp-for=Id />
+
     <div class="form-group">
         <label for="nome">Nome</label>
-        <input type="text" class="form-control" placeholder="Digite o nome do Contato">
+        <input type="text" asp-for="Nome" class="form-control" placeholder="Digite o nome do Contato">
     </div>
 
     <div class="form-group">
         <label for="email">Email</label>
-        <input type="text" class="form-control" placeholder="Digite o email do Contato">
+        <input type="text" asp-for="Email" class="form-control" placeholder="Digite o email do Contato">
     </div>
 
     <div class="form-group">
         <label for="celular">Celular</label>
-        <input type="text" class="form-control" placeholder="Digite o celular do Contato">
+        <input type="text" asp-for="Celular" class="form-control" placeholder="Digite o celular do Contato">
     </div>
 
-    <a class="btn btn-secondary btn-block" asp-controller="Contato" asp-action="Index" role="button">Voltar</a>
     <button type="submit" class="btn btn-primary btn-block">Alterar</button>
+    <a class="btn btn-secondary btn-block" asp-controller="Contato" asp-action="Index" role="button">Voltar</a>
+    
 
 </form>
