--- a/ControledeContatos/Views/Contato/Criar.cshtml
+++ b/ControledeContatos/Views/Contato/Criar.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model ContatoModel
+
+@{
     ViewData["Title"] = "Criar Contato";
 }
 
@@ -8,20 +10,21 @@
 
 </div>
 
-<form>
+<form asp-controller="Contato" asp-action="Criar" method="post">
+
     <div class="form-group">
         <label for="nome">Nome</label>
-        <input type="text" class="form-control" placeholder="Digite o nome do Contato">
+        <input type="text" asp-for="Nome" class="form-control" placeholder="Digite o nome do Contato">
     </div>
         
     <div class="form-group">
         <label for="email">Email</label>
-        <input type="text" class="form-control" placeholder="Digite o email do Contato">
+        <input type="text" asp-for="Email" class="form-control" placeholder="Digite o email do Contato">
     </div>
 
     <div class="form-group">
         <label for="celular">Celular</label>
-        <input type="text" class="form-control" placeholder="Digite o celular do Contato">
+        <input type="text" asp-for="Celular" class="form-control" placeholder="Digite o celular do Contato">
     </div>  
     <div class="d-grid gap-2">
       <!--Div nova para fazer a formatação correta-->   
