--- a/ControledeContatos/Views/Home/Index.cshtml
+++ b/ControledeContatos/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Bem Vindo</h1>
-    <p>Sistema de controlde de Contatos.</p>
+    <h1 class="display-4">Chama Aqui</h1>
+    <p>Sistema de emprego em tempo real.</p>
 </div>
