--- a/ControledeContatos/Views/Contato/ApagarConfirmacao.cshtml
+++ b/ControledeContatos/Views/Contato/ApagarConfirmacao.cshtml
@@ -1,11 +1,9 @@
 ﻿@model ContatoModel
 @{
-    ViewData["Title"] = "Confirmação apagar contato";
+    ViewData["title"] = "Confirmação pagar contato"; 
 }
-
-<div class="text-center">
-    <h3>Realmente deseja apagar o contato (@Model.Nome)?</h3>
-</div>
-
-<a class="btn btn-primary btn-block" asp-action="Index" asp-controller="Contato" role="button">Cancelar exclusão</a>
-<a class="btn btn-danger btn-block" asp-action="Apagar" asp-controller="Contato" asp-route-id="@Model.Id" role="button">Confirmar exclusão</a>
+ <div class="text-center">
+     <h3>Realmente deseja apagar o contato? @Model.Nome</h3>
+ </div>
+ <a class="btn btn-primary btn-block" role="button" asp-controller="Contato" asp-action="Index">Cancelar Exclusão </a>
+ <a class="btn btn-danger btn-block" role="button" asp-controller="Contato" asp-action="Apagar" asp-route-id="@Model.Id">Confirmar Exclusão</a>
