--- a/ControledeContatos/Views/Contato/Editar.cshtml
+++ b/ControledeContatos/Views/Contato/Editar.cshtml
@@ -16,16 +16,19 @@
     <div class="form-group">
         <label for="nome">Nome</label>
         <input type="text" asp-for="Nome" class="form-control" placeholder="Digite o nome do Contato">
+        @Html.ValidationMessageFor(x => x.Nome)
     </div>
 
     <div class="form-group">
         <label for="email">Email</label>
         <input type="text" asp-for="Email" class="form-control" placeholder="Digite o email do Contato">
+        @Html.ValidationMessageFor(x => x.Email)
     </div>
 
     <div class="form-group">
         <label for="celular">Celular</label>
         <input type="text" asp-for="Celular" class="form-control" placeholder="Digite o celular do Contato">
+        @Html.ValidationMessageFor(x => x.Celular)
     </div>
 
     <button type="submit" class="btn btn-primary btn-block">Alterar</button>
