--- a/ControledeContatos/Views/Usuario/Index.cshtml
+++ b/ControledeContatos/Views/Usuario/Index.cshtml
@@ -1,12 +1,12 @@
-﻿@model List<ContatoModel>
+﻿@model List<UsuarioModel>
 @{
-    ViewData["Title"] = "Listagem de Contatos";
+    ViewData["Title"] = "Listagem de Usuarios";
 }
 
 <div class="text-center">
 
     <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-        <a class="btn btn-primary" asp-controller="Contato" asp-action="Criar" role="button">Adicionar novo contato</a>
+        <a class="btn btn-primary" asp-controller="Usuario" asp-action="Criar" role="button">Adicionar novo usuario</a>
     </div>
 
     <br />
@@ -30,15 +30,15 @@
 
     <br />
 
-    <h1 class="display-4">Listagem de contatos</h1>
+    <h1 class="display-4">Listagem de Usuarios</h1>
 
-    <table id="table-contatos" class="display" style="width:100%">
+    <table id="table-usuarios" class="display" style="width:100%">
         <thead>
             <tr>
                 <th scope="col">#</th>
                 <th scope="col">Nome</th>
-                <th scope="col">Email</th>
-                <th scope="col">Celular</th>
+                <th scope="col">Login</th>
+                <th scope="col">Data de Cadastro</th>
                 <th scope="col"></th>
             </tr>
         </thead>
@@ -46,17 +46,17 @@
 
             @if (Model != null && Model.Any())
             {
-                foreach (var contato in Model)
+                foreach (var usuario in Model)
                 {
                     <tr>
-                        <th scope="row">@contato.Id</th>
-                        <td>@contato.Nome</td>
-                        <td>@contato.Email</td>
-                        <td>@contato.Celular</td>
+                        <th scope="row">@usuario.Id</th>
+                        <td>@usuario.Nome</td>
+                        <td>@usuario.Login</td>
+                        <td>@usuario.DataCadastro</td>
                         <td>
                             <div class="btn-group" role="group">
-                                <a role="button" asp-action="Editar" asp-controller="Contato" asp-route-id="@contato.Id" class="btn btn-primary">Editar</a>
-                                <a role="button" asp-action="ApagarConfirmacao" asp-controller="Contato" asp-route-id="@contato.Id" class="btn btn-danger">Apagar</a>
+                                <a role="button" asp-action="Editar" asp-controller="Usuario" asp-route-id="@usuario.Id" class="btn btn-primary">Editar</a>
+                                <a role="button" asp-action="ApagarConfirmacao" asp-controller="Usuario" asp-route-id="@usuario.Id" class="btn btn-danger">Apagar</a>
                             </div>
                         </td>
                     </tr>
@@ -64,7 +64,7 @@
             }
             else
             {
-                <tr class="odd"><td valign="top" colspan="5">Nenhum contato encontrado</td></tr>
+                <tr class="odd"><td valign="top" colspan="5">Nenhum usuario encontrado</td></tr>
             }
         </tbody>
     </table>
