--- a/ControledeContatos/Views/Usuario/Editar.cshtml
+++ b/ControledeContatos/Views/Usuario/Editar.cshtml
@@ -2,23 +2,24 @@
 @model UsuarioModel
 
 @{
-    ViewData["Title"] = "Criar Usuario";
+    ViewData["Title"] = "Editar Usuario";
 }
 
 <div class="text-center">
 
-<h1 class="display-4"> Cadastrar Usuario </h1>  
+    <h1 class="display-4"> Editar Usuario </h1>
 
 </div>
 
-<form asp-controller="Usuario" asp-action="Criar" method="post">
+<form asp-controller="Usuario" asp-action="Alterar" method="post">
+    <input type="hidden" asp-for="Id" />
 
     <div class="form-group">
         <label for="nome">Nome</label>
         <input type="text" asp-for="Nome" class="form-control" placeholder="Digite o nome do Usuario">
         @Html.ValidationMessageFor(x => x.Nome)
     </div>
-        
+
     <div class="form-group">
         <label for="email">Email</label>
         <input type="text" asp-for="Email" class="form-control" placeholder="Digite o email do Usuario">
@@ -29,28 +30,22 @@
         <label for="celular">Login</label>
         <input type="text" asp-for="Login" class="form-control" placeholder="Digite o login do Usuario">
         @Html.ValidationMessageFor(x => x.Login)
-    </div>  
+    </div>
 
     <div class="form-group">
-        <label for="celular">Perfil</label>        
+        <label for="celular">Perfil</label>
         <select asp-for="Perfil" class="form-control">
             <option value="">Selecione</option>
             <option value="@PerfilEnum.Admin">Administrador</option>
             <option value="@PerfilEnum.Padrao">Padrão</option>
         </select>
         @Html.ValidationMessageFor(x => x.Perfil)
-    </div>
-
-    <div class="form-group">
-        <label for="celular">Senha</label>
-        <input type="password" asp-for="Senha" class="form-control" placeholder="Digite a senha do Usuario">
-        @Html.ValidationMessageFor(x => x.Senha)
-    </div>
-
+    </div> 
+    <br />
 
     <div class="d-grid gap-2">
-      <!--Div nova para fazer a formatação correta-->   
+        <!--Div nova para fazer a formatação correta-->
         <a class="btn btn-secondary btn-block" asp-controller="Usuario" asp-action="Index" role="button">Voltar</a>
-        <button type="submit" class="btn btn-primary btn-block">Criar</button>
+        <button type="submit" class="btn btn-primary btn-block">Alterar</button>
     </div>
 </form>
