--- a/ControledeContatos/Views/Contato/Index.cshtml
+++ b/ControledeContatos/Views/Contato/Index.cshtml
@@ -4,6 +4,7 @@
 }
 
 <div class="text-center">
+    <!--Apenas um comentario 2223333-->
 
     <div class="d-grid gap-2 d-md-flex justify-content-md-start">
         <a class="btn btn-primary" asp-controller="Contato" asp-action="Criar" role="button">Adicionar novo contato</a>
