--- a/ControledeContatos/Views/Login/Index.cshtml
+++ b/ControledeContatos/Views/Login/Index.cshtml
@@ -4,8 +4,18 @@
 	ViewData["Title"] = "Login";
 }
 
+@if (TempData["MensagemErro"] != null)
+{
+    <div class="alert alert-danger" role="alert">
+        <button type="button" class="btn btn-danger btn-sm close-alert" data-bs-dismiss="alert" aria-label="Close">X</button>
+        @TempData["MensagemErro"]
+    </div>
+}
+
 <form asp-controller="Login" asp-action="Entrar" method="post">
     <!--Apenas um comentario 2223333--> 
+
+    <div class="col-md-6" style="margin: 0 auto !important"> 
     <div class="mb-3">
         <label for="login" class="form-label">Login</label>
         <input type="text" asp-for="Login" class="form-control" id="login">       
@@ -16,6 +26,7 @@
         <input type="password" asp-for="Senha" class="form-control" id="senha">
         @Html.ValidationMessageFor(x => x.Senha)
     </div>
-   
     <button type="submit" class="btn btn-primary btn-block">Entrar</button>
+    </div>
+
 </form>
