--- a/ControledeContatos/Views/Shared/Components/Menu/Default.cshtml
+++ b/ControledeContatos/Views/Shared/Components/Menu/Default.cshtml
@@ -15,12 +15,15 @@
         <li class="nav-item">
             <a class="nav-link text-dark" asp-area="" asp-controller="Contato" asp-action="Index">Contatos</a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="" asp-controller="Usuario" asp-action="Index">Usuarios</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Sair">Sair</a>
-        </li>
-    </ul>
+        
+        @if (Model.Perfil == ControledeContatos.Enums.PerfilEnum.Admin )
+        {
+            <li class="nav-item">
+                <a class="nav-link text-dark" asp-area="" asp-controller="Usuario" asp-action="Index">Usuarios</a>
+            </li>
+        }       
+    </ul>    
+    <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Sair">Sair</a>
+    
 </div>
 
