--- a/ControledeContatos/Views/Login/Index.cshtml
+++ b/ControledeContatos/Views/Login/Index.cshtml
@@ -12,6 +12,14 @@
     </div>
 }
 
+@if (TempData["MensagemSucesso"] != null)
+{
+    <div class="alert alert-success" role="alert">
+        <button type="button" class="btn btn-danger btn-sm close-alert" data-bs-dismiss="alert" aria-label="Close">X</button>
+        @TempData["MensagemSucesso"]
+    </div>
+}
+
 <form asp-controller="Login" asp-action="Entrar" method="post">
     <!--Apenas um comentario 2223333--> 
 
@@ -26,6 +34,11 @@
         <input type="password" asp-for="Senha" class="form-control" id="senha">
         @Html.ValidationMessageFor(x => x.Senha)
     </div>
+    <p class="mb-4 text-sm-center mx-auto">
+        Esqueceu sua senha?
+            <a asp-action="RedefinirSenha" asp-controller="Login" class="text-primary text-gradiente font-weight-bold">Redefinir senha</a>
+    </p>
+
     <button type="submit" class="btn btn-primary btn-block">Entrar</button>
     </div>
 
