--- a/ControledeContatos/Views/Shared/Components/Menu/Default.cshtml
+++ b/ControledeContatos/Views/Shared/Components/Menu/Default.cshtml
@@ -23,6 +23,8 @@
             </li>
         }       
     </ul>    
+    <a class="nav-link text-dark" asp-area="" asp-controller="AlterarSenha" asp-action="Index">Alterar Senha</a>
+
     <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Sair">Sair</a>
     
 </div>
