--- a/ControledeContatos/Views/Login/Index.cshtml
+++ b/ControledeContatos/Views/Login/Index.cshtml
@@ -24,22 +24,29 @@
     <!--Apenas um comentario 2223333--> 
 
     <div class="col-md-6" style="margin: 0 auto !important"> 
+
     <div class="mb-3">
         <label for="login" class="form-label">Login</label>
         <input type="text" asp-for="Login" class="form-control" id="login">       
         @Html.ValidationMessageFor(x => x.Login)
     </div>
+
     <div class="mb-3">
         <label for="senha" class="form-label">Senha</label>
         <input type="password" asp-for="Senha" class="form-control" id="senha">
         @Html.ValidationMessageFor(x => x.Senha)
     </div>
+       
+
     <p class="mb-4 text-sm-center mx-auto">
         Esqueceu sua senha?
-            <a asp-action="RedefinirSenha" asp-controller="Login" class="text-primary text-gradiente font-weight-bold">Redefinir senha</a>
+        <a asp-action="RedefinirSenha" asp-controller="Login" class="text-primary text-gradiente font-weight-bold">Redefinir senha</a>
     </p>
 
-    <button type="submit" class="btn btn-primary btn-block">Entrar</button>
+    <p class="mb-4 text-sm-center mx-auto">
+        <button type="submit" class="btn btn-primary btn-block">Entrar</button>           
+    </p>
+
     </div>
 
 </form>
